CHANGES
=======

* Refactored HTTP caching
* Initial test coverage
* Added more verbosity to healthchecks
* Fixed travis build, added cache support
* Disabled SSH fingerprint check when in build mode (build expectations)
* Working docker build on Alpine 3.8
* Prepared Dockerfile for unit tests integration
* Added Dockerfile
* Added more configurable timeouts
* Travis debug
* Fix
* Fix
* Added: 'on\_failure\_even\_if\_security\_violation' for health checks and 'verify\_ssh\_fingerprint'
* Travis ci test
* Travis ci test
* Travis ci test
* Travis ci test
* Travis ci test
* Travis ci test
* Travis ci test
* Travis ci test
* Travis ci test
* Travis ci test
* Travis ci test
* Travis ci test
* Travis debug
* Updated dependencies
* Updated dependencies
* Updated dependencies
* Added test travis configuration file
* Updated gitignore
* Early version