@@ -4,3 +4,4 @@ PyYAML>=3.12
 PySocks>=1.6
 pbr>=5.1
 setuptools>=40.4.3
+requests
